[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Homeless_1/Idle.png" type="Texture" id=1]
[ext_resource path="res://scenes/Homeless.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Audio/impactPunch_medium_000.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Homeless_1/Hurt.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 36.25, 69.5 )

[node name="Homeless" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "Idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.75, 60.5 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0

[node name="AudioTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Homeless_body_entered"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]
